Fixing home features on mobile.

--- a/public/css/choko.css
+++ b/public/css/choko.css
@@ -120,7 +120,7 @@ a {
     padding-top: 35px;
     padding-bottom: 35px;
   }
-  .home .row-content {
+  .home .row-content .container {
     max-width: 900px;
     margin: 0 auto;
   }
